refactor: migrate identifier generation to UUIDv7